<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Samathuvapuram</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">UserName</string>
    <string name="btn_login">Login</string>
    <string name="font_circular_medium">circular-medium.ttf</string>
    <string name="font_circular_bold">circular-bold.ttf</string>
    <string name="font_circular_book">circular-book.ttf</string>
    <string name="font_circular_black">circular-black.ttf</string>
    <string name="font_normal">din_pro_light.otf</string>
    <string name="no_internet">Your internet seems to be offline!</string>
    <string name="view_image"><u>View Image</u></string>
    <string name="take_action">Take Action</string>
    <string name="view_action">View Action</string>
    <string name="action_taken_tv" tools:ignore="ExtraTranslation">Action Taken Against Inspection Report for High Value Project</string>
    <string name="init_vector">2SN22SkJGDyOAXUU</string>
    <string name="main_page">Main Page</string>
    <string name="log_out_icon">log_out_icon</string>
    <string name="go">Go</string>
    <string name="pending_works_for_upload">Pending Works for Upload</string>
    <string name="sync">Sync Data To Server</string>
    <string name="pending_uploads">Pending Uploads</string>
    <string name="upload_icon">upload_icon</string>
    <string name="software_designed_amp_developed_by_nic"><![CDATA[Software Designed & Developed by NIC]]></string>
    <string name="home_page">Home Page</string>
    <string name="back_icon">back_icon</string>
    <string name="select_fin_year">Select Fin Year</string>
    <string name="after_capture">After Capture</string>
    <string name="save_local">Save Local</string>
    <string name="before_capture">Before Capture</string>

    <string name="gps_is_not_turned_on">GPS is not turned on…</string>
    <string name="satellite">Satellite communication not available to get GPS Co-ordination Please Capture Photo in Open Area…</string>
    <string name="permission_required">Permissions required!</string>
    <string name="camera_need_permission">Camera needs few permissions to work properly. Grant them in settings.</string>
    <string name="goto_settings">Goto Settings</string>
    <string name="cancel">Cancel</string>
    <string name="user_canceled_image_capture">User cancelled image capture</string>
    <string name="sorry_failed_to_capture">Sorry! Failed to capture image</string>
    <string name="user_canceled_video">User cancelled video recording</string>
    <string name="sorry_failed_capture_video">Sorry! Failed to record video</string>

    <string name="do_u_want_to_delete">Do you want to delete?</string>
    <string name="do_u_want_to_upload">Do you want to Upload?</string>
    <string name="do_u_want_to_delivered">Do you want to Delivered this items?</string>
    <string name="do_u_want_to_edit">Do you want to Edit?</string>
    <string name="entry_form">Entry Form</string>
    <string name="view_data">View Data</string>

    <string name="at_least_capture_one_photo">At least Capture one Photo</string>
    <string name="please_capture_image">Please Capture Image</string>
    <string name="maximum_three_photos">Maximum Photo reached</string>
    <string name="minimum_three_photos">Minimum Photo not reached</string>
    <string name="inserted_success">Inserted Success!</string>
    <string name="updated_success">Updated Success!</string>
    <string name="select_buyer_type">Select Buyer Type</string>
    <string name="enter_buyer_name">Enter Buyer Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="search">Search</string>
    <string name="enter_count">Enter count</string>
    <string name="enter_mgnregs_id">Enter MGNREGS ID</string>
    <string name="village_name">Village Name</string>
    <string name="semi_colan">:</string>
    <string name="save">Save</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_data">Upload Data</string>
    <string name="no_projects_found">No Projects Found!</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="you_need_to_update_Samathuvapuram">You need to update Samathuvapuram Application</string>
    <string name="this_version_of_Samathuvapuram_is_no_longer_supported_please_go_to_official_site_and_install_new_version">This version of Samathuvapuram is no longer supported. Please go to Official Site and install new version</string>
    <string name="update">Update</string>
    <string name="you_can_capture_up_to_3_photos">You Can Capture up to 3 photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_image_local">Save Image Local</string>
    <string name="enter_description">Enter Description</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="submit">Submit</string>
    <string name="species_name">Species Name</string>
    <string name="quantity">Quantity</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="version">Version</string>
    <string name="sign_in">Sign In</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="order_date">Order Date</string>
    <string name="order_id">Order ID</string>
    <string name="byer_name">Byer Name</string>
    <string name="view">View</string>
    <string name="date">Date</string>
    <string name="save_image">Save Image</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="please_enter_user_name_and_password">Please enter your username and password!</string>
    <string name="internet_connection_not_available_please_turn_on_or_offline">Internet Connection is not available..Please Turn ON Network Connection OR Continue With Off-line Mode..</string>
    <string name="settings">Settings</string>
    <string name="continue_with_offline">Continue With Off-Line</string>
    <string name="please_enter_the_user_name">Please enter the username</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="invalid_user_name_or_password">Invalid UserName Or Password</string>
    <string name="log_in_again">Login Again</string>
    <string name="no_data_available_for_offline_please_turn_on_network">No data available for offline. Please Turn On Your Network</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="count_mismatched">Count MisMatched</string>
    <string name="success">Success</string>
    <string name="faild">Failed</string>
    <string name="maximum_count_reached">Maximum Count Reached</string>
    <string name="please_enter_valid_mobile_number">Please Enter Valid Mobile Number</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please__select_village">Please Select Village</string>
    <string name="atleast_capture_one_photo">Atleast Capture one Photo</string>
    <string name="satellite_communication_not_available">Satellite communication not available to get GPS Co-ordination Please Capture Photo in Open Area..</string>
    <string name="gps_not_turned_on">GPS is not turned on…</string>
    <string name="permissions_required">Permissions required!</string>
    <string name="camera_needs_few_permission">Camera needs few permissions to work properly. Grant them in settings.</string>
    <string name="user_cancelled_image_capture">User cancelled image capture</string>
    <string name="sorry_failed_to_capture_image">Sorry! Failed to capture image</string>
    <string name="user_cancelled_video_recording">User cancelled video recording</string>
    <string name="sorry_faild_to_record_video">Sorry! Failed to record video</string>
    <string name="please_upload_your_dead_saplings">Please Upload Your Dead Saplings</string>
    <string name="logging_out_while_offline_may_leads_to_loss_data">Logging out while offline may leads to loss of data!</string>
    <string name="sync_all_the_data_before_logout">Sync all the data before logout!</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit ?</string>
    <string name="please_enter_valid_height">Please Enter Height/Valid Height</string>
    <string name="please_choose_your_language">Please Choose Your Language</string>
    <string name="tamil">Tamil</string>
    <string name="english">English</string>
    <string name="done">Done</string>
    <string name="select_habitation">Select Habitation</string>
    <string name="select_village">Select Village</string>
    <string name="enter_beneficiary_name">Enter Beneficiary Name</string>
    <string name="enter_father_husband_name">Enter Father/Husband Name</string>
    <string name="enter_secc_id">Enter SECC Id</string>
    <string name="tn">TN</string>
    <string name="whether_the_beneficiary_is_alive">Whether the beneficiary is alive</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="if_no_any_legal_heir_available_in_secc_data">if No,any legal heir available in SECC data</string>
    <string name="whether_the_beneficiary_migrated_permanently">Whether the beneficiary migrated permanently</string>
    <string name="view_captured_images">View Captured Images</string>
    <string name="view_data_from_server">View Data From Server</string>
    <string name="remark">Remark</string>
    <string name="loading">Loading...</string>
    <string name="beneficiary_details">Beneficiary Details</string>
    <string name="beneficiary_image">Beneficiary Image</string>
    <string name="existing_house_with_beneficiary">Existing House With Beneficiary</string>
    <string name="view_server_images">View Server Images</string>
    <string name="view_server_data">View Server Data</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="capital_expenditure">Capital Expenditure</string>
    <string name="recurring_expenditure">Recurring Expenditure</string>
    <string name="select_expenditure">Select Expenditure</string>
    <string name="select_expenditure_unit">Select Expenditure Unit</string>
    <string name="select_expenditure_found_src">Select Expenditure Found Src</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="please_specify">Please Specify</string>
    <string name="dead_saplings">Dead Saplings</string>
    <string name="expenditure">Expenditure</string>
    <string name="expenditure_view">Expenditure View</string>
    <string name="number_of_members">Number Of Members</string>
    <string name="pia_type">PIA Type</string>
    <string name="pia_name">PIA Name</string>
    <string name="select_water_source_type">Select Water Source Type</string>
    <string name="other_water_source_type">Other Water Source Type</string>
    <string name="select_fencing_type">Select Fencing Type</string>
    <string name="other_fencing_type">Other Fencing Type</string>
    <string name="land_name_ta">Land Name Ta</string>
    <string name="land_name_en">Land Name En</string>
    <string name="area">Area</string>
    <string name="survey_number">Survey Number</string>
    <string name="sub_div_no">Sub_Div_No</string>
    <string name="water_source">Water Source</string>
    <string name="fencing">Fencing</string>
    <string name="saplings_count">Saplings Count</string>
    <string name="age_in_days">Age In Days</string>
    <string name="amount">Amount</string>
    <string name="house_list">House List</string>
    <string name="no_data_found">No Data Found</string>

</resources>
