<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="activity"
            type="com.nic.samathuvapuram.activity.AppUpdateDialog" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/warning"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/edit_text_padding"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:padding="@dimen/padding"
            android:text="@string/you_need_to_update_Samathuvapuram"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            style="@string/font_circular_medium" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:padding="@dimen/padding"
            android:text="@string/this_version_of_Samathuvapuram_is_no_longer_supported_please_go_to_official_site_and_install_new_version"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            style="@string/font_normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                android:visibility="gone"
                style="@string/font_normal" />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/update"
                android:onClick="@{()->activity.showGooglePlay()}"
                android:textColor="@android:color/white"
                android:textSize="@dimen/content_text_size"
                android:textStyle="bold"
                tools:ignore="SpUsage" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</layout>