<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.nic.samathuvapuram.activity.HouseListActivity" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/background"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/back_img"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="start"
                        android:onClick="@{()-> activity.onBackPressed()}"
                        android:src="@mipmap/back_arrow" />


                    <TextView
                        android:id="@+id/title_tv"
                        style="@style/font_circular_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/house_list"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="RelativeOverlap" />


                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:background="@color/colorAccentverylight"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fadeScrollbars="false"
                    android:scrollbarSize="4dp"
                    android:scrollbars="vertical"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/not_found_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data_found"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />


            </RelativeLayout>

        <RelativeLayout
            android:id="@+id/syn_data"
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/rectangle_box"
            android:visibility="gone">


            <TextView
                android:id="@+id/view_offline_images"
                style="@string/font_circular_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/sync"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="17sp" />


        </RelativeLayout>

    </RelativeLayout>
</layout>