<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
        name="activity"
        type="com.nic.samathuvapuram.activity.CameraScreen" />
</data>
<RelativeLayout
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/d_grey"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/take_photo"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:onClick="@{()-> activity.onBackPress()}"
            android:src="@mipmap/back_arrow"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/home_img"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_12sdp"
            android:onClick="@{()-> activity.homePage()}"
            android:src="@mipmap/home_img"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/multi_capture_layout">
    <TextView
        android:id="@+id/image_count_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#CCC"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/you_can_capture_up_to_3_photos"
        android:textSize="@dimen/content_title_text_size"
        android:visibility="visible"
        tools:ignore="SpUsage" />
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <LinearLayout
                android:id="@+id/camera_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/button_background"
                android:text="@string/add_photo"
                android:textStyle="bold"
                android:textSize="@dimen/content_text_size"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                tools:ignore="RtlHardcoded" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                >
                <Button
                    android:id="@+id/btn_save_local"
                    android:layout_width="150dp"
                    android:textSize="@dimen/content_text_size"
                    android:textStyle="bold"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_background"
                    android:text="@string/save_image_local"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/single_capture_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_layout"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">


            <RelativeLayout
                android:id="@+id/image_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/district_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toolbar"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="15dp"
                    android:layout_marginTop="15dp"
                    card_view:cardCornerRadius="5dp"
                    card_view:cardElevation="5dp"
                    tools:ignore="UnknownIdInLayout">


                    <LinearLayout
                        android:id="@+id/header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/image_view_preview"
                                android:layout_width="match_parent"
                                android:layout_height="190dp"
                                android:background="@drawable/capture_image"
                                android:onClick="@{()-> activity.getLatLong()}"
                                android:scaleType="fitXY"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:id="@+id/image_view"
                                android:layout_width="match_parent"
                                android:layout_height="190dp"
                                android:scaleType="fitXY"
                                android:onClick="@{()-> activity.getLatLong()}"
                                android:visibility="gone"
                                tools:ignore="ContentDescription" />


                            <!--<View-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="0.5dp"-->
                            <!--android:layout_gravity="bottom"-->
                            <!--android:layout_marginLeft="15dp"-->
                            <!--android:background="@color/dashboard_line_dark" />-->


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone"
                                android:orientation="horizontal">


                                <EditText
                                    android:id="@+id/description"
                                    style="@style/font_circular_bold"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dip"
                                    android:layout_marginTop="10dip"
                                    android:layout_marginRight="10dip"
                                    android:background="@android:color/transparent"
                                    android:gravity="top"
                                    android:hint="@string/enter_description"
                                    android:lines="6"
                                    android:textColor="@android:color/black"
                                    android:textSize="@dimen/content_text_size"
                                    android:inputType="text"
                                    android:importantForAutofill="no"
                                    tools:ignore="TooDeepLayout" />
                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/parent_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:background="@drawable/button_background"
                android:text="@string/save_image"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:text="@string/software_designed_amp_developed_by_nic"
        android:textAlignment="center"
        android:textColor="@color/d_grey1"
        android:textSize="@dimen/title_text_size"
        />


</RelativeLayout>

</layout>